# ChangeLog for dev-java/tomcat-servlet-api
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.127 2012/03/25 20:10:52 fordfrog Exp $

  25 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
  -tomcat-servlet-api-6.0.32.ebuild, -tomcat-servlet-api-7.0.25.ebuild:
  Removed obsolete versions

  25 Mar 2012; Agostino Sarubbo <ago@gentoo.org>
  tomcat-servlet-api-7.0.26.ebuild:
  Stable for amd64, wrt bug #409609

  12 Mar 2012; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-6.0.35.ebuild:
  Marking tomcat-servlet-api-6.0.35 ppc64 for bug 395933

  12 Mar 2012; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-7.0.23.ebuild:
  Marking tomcat-servlet-api-7.0.23 ppc64 for bug 395923

  10 Mar 2012; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-6.0.35.ebuild:
  Marking tomcat-servlet-api-6.0.35 ppc for bug 395933

  10 Mar 2012; Brent Baude <ranger@gentoo.org>
  tomcat-servlet-api-7.0.23.ebuild:
  Marking tomcat-servlet-api-7.0.23 ppc for bug 395923

  23 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
  tomcat-servlet-api-7.0.25.ebuild:
  Stable for amd64, wrt bug #405307

*tomcat-servlet-api-7.0.26 (22 Feb 2012)

  22 Feb 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +tomcat-servlet-api-7.0.26.ebuild:
  Version bump

*tomcat-servlet-api-7.0.25 (21 Jan 2012)

  21 Jan 2012; Miroslav Šulc <fordfrog@gentoo.org>
  +tomcat-servlet-api-7.0.25.ebuild:
  Version bump

  06 Jan 2012; Miroslav Šulc <fordfrog@gentoo.org>
  -tomcat-servlet-api-6.0.33.ebuild:
  Removed old version

  04 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  tomcat-servlet-api-6.0.35.ebuild:
  x86 stable wrt bug #395933

  01 Jan 2012; Ralph Sennhauser <sera@gentoo.org> tomcat-servlet-api-3.ebuild,
  tomcat-servlet-api-4.1.36.ebuild:
  Drop ia64 support #345433

  30 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org>
  -tomcat-servlet-api-7.0.22.ebuild:
  Removed old version
