@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/tomcat-servlet-api
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.127 2012/03/25 20:10:52 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/tomcat-servlet-api/ChangeLog,v 1.128 2012/04/05 19:56:00 fordfrog Exp $
+
+*tomcat-servlet-api-7.0.27 (05 Apr 2012)
+
+  05 Apr 2012; Miroslav Šulc <fordfrog@gentoo.org>
+  +tomcat-servlet-api-7.0.27.ebuild:
+  Version bump
 
   25 Mar 2012; Miroslav Šulc <fordfrog@gentoo.org>
   -tomcat-servlet-api-6.0.32.ebuild, -tomcat-servlet-api-7.0.25.ebuild:
